--- a/templates/index.html
+++ b/templates/index.html
@@ -13,4 +13,10 @@
         <input type="submit" value="solve">
     </form>
 
+    {% if error %}
+        {{ error }}
+    {% else %}
+        {{ result }}
+    {% endif %}
+
 {% endblock %}
