--- a/templates/index.html
+++ b/templates/index.html
@@ -16,10 +16,10 @@
     </div>
 
     <div style="float: left; margin-left: 40px;">
-        <p>Use the following symbols to:</p>
-        <p>1. tabs, enter or ';' to separate equations;</p>
-        <p>2. lowercase letter to name variables;</p>
-        <p>3. 'E' to create exponent of a number.</p>
+        <p>Rules of linear equations input:</p>
+        <p>1. use tabs, enter or ';' to separate equations;</p>
+        <p>2. start variables' names with lowercase letters;</p>
+        <p>3. use 'E' to create the exponent of a number.</p>
         <p>You can't use any brackets.</p>
         <p>Each variable can be used several times in the same equation.</p>
     </div>
