--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         {% block title %}<title></title>{% endblock %}
+        <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+        <script src="{{ MEDIA_URL }}js/application.js"></script>
 
     </head>
     <body>
